--- a/public/app.json
+++ b/public/app.json
@@ -39,8 +39,14 @@
      *      }
      */
     "js": [
+         {
+            "path": "OpenCharts/lib/d3.min.js"
+        },
         {
-            "path": "sencha-touch-all.js",
+            "path": "OpenCharts/lib/nv.d3.min.js"
+        },
+        {
+            "path": "sencha-touch-all-debug.js",
             "x-bootstrap": true
         },
         {
@@ -59,6 +65,10 @@
         },
         {
             "path": "js/field/TimePicker.js",
+            "update": "delta"
+        },
+	 {
+            "path": "js/OpenCharts/PieChart.js",
             "update": "delta"
         },
         {
@@ -87,6 +97,10 @@
         {
             "path": "resources/css/sencha-touch.css",
             "platform": ["desktop"],
+            "update": "delta"
+        },
+        {
+            "path": "resources/css/nv.d3.min.css",
             "update": "delta"
         },
         {
